[chore] #55 공강시간표와 겹치는 모임만 조회